Revert "fix #5 increment the semesters listing"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <div class="side-menu">
-      <button class="add-semester">Add New Semester</button>
+      <button class="add-semester">Add Semester</button>
     </div>
     <section class="gpcont">
       <div class="gpcont-header">
@@ -27,7 +27,7 @@
           </p>
 
           <p>
-            <select name="grade-select" class="grade-select" required>
+            <select name="grade-select" class="grade-select">
               <option value="--">Select Grade</option>
               <option value="a">A</option>
               <option value="b">B</option>
