Fix the error raised when trying to remove the one last course

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <p class="course-grade"></p>
           <p class="course-credits"></p>
         </div>
-        <div onclick="removeCourse()" class="remove-course">
+        <div onclick="removeCourse(event)" class="remove-course">
           &cross;
         </div>
       </div>
