checking out another branch

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <aside>
-      <i style="font-size: 35" class="material-icons add-icon">add_circle</i>
+      <i style="font-size: 35" class="material-icons add-icon">keyboard_arrow_right</i>
       <i style="font-size: 35" class="material-icons add-icon">school</i>
       <i style="font-size: 35" class="material-icons add-icon">settings</i>
     </aside>
@@ -111,8 +111,12 @@
 
   </div>
 
-  <script src="./js/index.js"></script>
-  <script src="./js/util.js"></script>
+  <script type="module" src="./js/index.mjs"></script>
+  <script type="module" src="./js/util.mjs"></script>
+  <script type="module" src="./js/beedle.mjs"></script>
+  <script type="module" src="./js/actions.mjs"></script>
+  <script type="module" src="./js/mutations.mjs"></script>
+  <script type="module" src="./js/nodes.mjs"></script>
 </body>
 
 </html>
