Working with redux now

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="./css/position.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/semester-form-card.css">
@@ -12,6 +13,11 @@
   <link rel="stylesheet" href="./css/header-aside.css">
   <link rel="stylesheet" href="./css/mdi/mdi.css">
   <link rel="stylesheet" href="./css/semester-grade-table.css">
+
+  <!-- IOS SUPPORT -->
+  <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-status-bar" content="#87cfeb70">
+  <meta name="theme-color" content="#87cfeb70">
 </head>
 
 <body>
@@ -22,7 +28,7 @@
       </p>
       <p id="swag-gp-logo">SWAG-GP</p>
       <div class="user-actions">
-        <a id="about" href="#">ABOUT</a>
+        <a id="about" href="./pages/about.html">ABOUT</a>
         <a id="donate" href="#">DONATE</a>
         <i id="show-chart" class="material-icons">show_chart</i> 
         <i id="user-icon" class="material-icons">person_pin</i>
@@ -30,7 +36,7 @@
     </header>
 
     <aside>
-      <i style="font-size: 35" class="material-icons add-icon">keyboard_arrow_right</i>
+      <i style="font-size: 35" id = "expose-levels" class="material-icons add-icon">keyboard_arrow_right</i>
       <i style="font-size: 35" class="material-icons add-icon">school</i>
       <i style="font-size: 35" class="material-icons add-icon">settings</i>
     </aside>
@@ -110,7 +116,7 @@
     </main>
 
   </div>
-
+  <script src="./js/regSW.js"></script>
   <script type="module" src="./js/index.mjs"></script>
   <script type="module" src="./js/util.mjs"></script>
   <script type="module" src="./js/beedle.mjs"></script>
