--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 
   <script src="./js/redux.min.js"></script>
   <script src="./js/nodes.js"></script>
+  <script src="./js/initialState.js"></script>
   <script src="./js/reducer.js"></script>
   <script src="./js/index.js"></script>
   <script src="./js/actions.js"></script>
