--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>GPA CALCULATOR</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="./css/position.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -25,7 +25,7 @@
   <div class="container">
     <header>
       <p class="invisible">
-        <i class="material-icons">menu</i>
+        <i style="color: white;" class="material-icons">menu</i>
       </p>
       <p id="swag-gp-logo">SWAG-GP</p>
       <div class="user-actions">
@@ -53,78 +53,9 @@
       <i style="font-size: 35" class="material-icons add-icon">school</i>
       <i style="font-size: 35" class="material-icons add-icon">settings</i>
     </aside>
+
     <main>
-      <section class="semester-card">
 
-        <div class="semester-details">
-          <p contenteditable="true" class="semester-name">Enter Semester Name</p>
-          <p class="year-of-study">Level</p>
-        </div>
-
-        <form class="semester-form">
-
-          <div class="input-select">
-
-
-            <input id="semester-form-course" type="text" name="course" class="semester-form-input"
-              placeholder="Course Name">
-
-            <select name="grade-select" class="grade-select">
-              <option value="--">Select Grade</option>
-              <option value="a">A</option>
-              <option value="b">B</option>
-              <option value="c">C</option>
-              <option value="d">D</option>
-              <option value="f">F</option>
-            </select>
-
-            <input id="semester-form-credits" type="text" name="credits" class="semester-form-input"
-              placeholder="Credits">
-          </div>
-
-          <div class="form-actions">
-            <button class="reset-form">Reset</button>
-            <button class="add-course">Add</button>
-          </div>
-
-        </form>
-
-        <div class="semester-grades">
-          <div class="table">
-
-            <div class="row header">
-              <p class="cell">Course Name</p>
-              <p class="cell">Grade</p>
-              <p class="cell">Units</p>
-              <p class="cell">Actions</p>
-            </div>
-
-            <div class="row">
-              <p class="cell" data-title="Course Name">ENG 224</p>
-              <p class="cell" data-title="Grade">A</p>
-              <p class="cell" data-title="Units">2</p>
-              <p class="cell" data-title="Actions">
-                <i class="material-icons table-edit-action">edit</i>
-                <i class="material-icons table-delete-action">delete</i>
-              </p>
-            </div>
-            <div class="row">
-              <p class="cell" data-title="Course Name">ENG 208</p>
-              <p class="cell" data-title="Grade">A</p>
-              <p class="cell" data-title="Units">2</p>
-              <p class="cell" data-title="Actions">
-                <i class="material-icons table-edit-action">edit</i>
-                <i class="material-icons table-delete-action">delete</i>
-              </p>
-            </div>
-
-          </div>
-          <div class="semester-actions">
-            <p class="semester-info">GPA: <span class="semester-gpa">5.0</span> </p>
-            <p><i class="material-icons add-semester-to-list">add_circle_outline</i></p>
-          </div>
-        </div>
-      </section>
     </main>
 
   </div>
